--- a/css/style.css
+++ b/css/style.css
@@ -49,15 +49,28 @@ nav ul li a {
 
 main {
   display: grid;
-  padding: 15px;
+  padding: 20px;
 }
 main figure {
   margin: 0;
+  margin: auto;
 }
 main figure img {
+  margin: auto;
   width: 100%;
 }
 main p {
   font-size: 20px;
   text-align: center;
+}
+
+footer {
+  height: 60px;
+  background-color: #cecece;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer p {
+  font-size: 20px;
 }/*# sourceMappingURL=style.css.map */
