--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ nav ul {
 }
 nav ul li {
   list-style: none;
-  width: 100vw;
   text-align: center;
   border-bottom-style: solid;
   border-width: 1px;
@@ -73,4 +72,14 @@ footer {
 }
 footer p {
   font-size: 20px;
+}
+
+@media screen and (min-width: 800px) {
+  nav {
+    width: 100vw;
+  }
+  nav ul {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
