--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,6 @@ nav {
 
         li {
             list-style: none;
-            width: 100vw;
             text-align: center;
             border-bottom-style: solid;
             border-width: 1px;
@@ -84,5 +83,16 @@ footer {
 
     p {
         font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    nav {
+        width: 100vw;
+
+        ul {
+            grid-template-columns: repeat(3, auto);
+            grid-template-rows: auto;
+        }
     }
 }
