--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,16 @@
 $headerColor: #cecece;
 $navColor: #ecf1f5;
 
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     line-height: 150%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .wrapper {
@@ -80,6 +87,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 
     p {
         font-size: 20px;
@@ -93,6 +101,21 @@ footer {
         ul {
             grid-template-columns: repeat(3, auto);
             grid-template-rows: auto;
+
+            li {
+                border-width: 1px;
+                border-color: #000;
+                border-style: solid;
+            }
+        }
+    }
+
+    main {
+        grid-template-columns: 1fr 2fr;
+        gap: 70px;
+
+        p {
+            text-align: left;
         }
     }
 }
